# dooc-template-library

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: gbenchmark.cmake  gtest.cmake
lib/math/: CMakeLists.txt
lib/math/benchmarks/: CMakeLists.txt  lpow.bb.cpp
lib/math/inc/dtl/: lpow.hpp
lib/math/tests/: CMakeLists.txt  lpow.tests.cpp  powl.cpp
